// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`badge-component applies dynamic styles correctly (token path) 1`] = `
<badge-component absolute="" aria-atomic="true" aria-live="polite" left="10" role="status" token="" top="20" z-index="5">
  <!---->
  <div class="badge__token-wrapper">
    <span class="badge__wrapper">
      <span aria-atomic="true" aria-label="" aria-live="polite" class="badge__token bg-primary" role="status" tabindex="0" style="position: absolute; left: 10px; top: 20px; z-index: 5;"></span>
    </span>
  </div>
</badge-component>
`;

exports[`badge-component dot badge: bordered + elevation classes present and stable 1`] = `
<badge-component aria-atomic="true" aria-live="polite" bordered="" dot="" elevation="2" role="status" variant="success">
  <!---->
  <div class="badge__token-wrapper">
    <span class="badge__wrapper">
      <span aria-atomic="true" aria-label="" aria-live="polite" class="badge--dot bg-success elevated-2 token-bordered" role="status" tabindex="0"></span>
    </span>
  </div>
</badge-component>
`;

exports[`badge-component renders default badge 1`] = `
<badge-component aria-hidden="true">
  <!---->
  <div class="badge bg-secondary">
    <div class="badge__content"></div>
  </div>
</badge-component>
`;

exports[`badge-component renders dot badge with shape and pulse 1`] = `
<badge-component aria-atomic="true" aria-live="polite" dot="" pulse="" role="status" shape="circle" variant="danger">
  <!---->
  <div class="badge__token-wrapper">
    <span class="badge__wrapper">
      <span aria-atomic="true" aria-label="" aria-live="polite" class="badge--dot bg-danger circle pulse" role="status" tabindex="0"></span>
    </span>
  </div>
</badge-component>
`;

exports[`badge-component renders positioned badge (left) 1`] = `
<badge-component aria-hidden="true" bdg-position="left">
  <!---->
  <div class="badge bg-secondary me-1"></div>
</badge-component>
`;

exports[`badge-component renders positioned badge (right) 1`] = `
<badge-component aria-hidden="true" bdg-position="right">
  <!---->
  <div class="badge bg-secondary ms-1"></div>
</badge-component>
`;

exports[`badge-component renders token badge with ARIA props and inlineStyles 1`] = `
<badge-component aria-atomic="true" aria-describedby="badgeDesc" aria-label="Token badge" aria-labelledby="badgeLabel" aria-live="polite" inline-styles="background-color: yellow; border-radius: 8px;" role="status" size="lg" token="" variant="info">
  <!---->
  <div class="badge__token-wrapper">
    <span class="badge__wrapper">
      <span aria-atomic="true" aria-describedby="badgeDesc" aria-label="Token badge" aria-labelledby="badgeLabel" aria-live="polite" class="badge__token bg-info lg" role="status" tabindex="0" style="background-color: yellow; border-radius: 8px;"></span>
    </span>
  </div>
</badge-component>
`;

exports[`badge-component token badge: outlined + bordered + elevation classes present and stable 1`] = `
<badge-component aria-atomic="true" aria-live="polite" bordered="" elevation="3" outlined="" role="status" token="" variant="primary">
  <!---->
  <div class="badge__token-wrapper">
    <span class="badge__wrapper">
      <span aria-atomic="true" aria-label="" aria-live="polite" class="badge__token bg-primary elevated-3 outlined token-bordered" role="status" tabindex="0"></span>
    </span>
  </div>
</badge-component>
`;
